--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Todo or not todo?</title>
   </head>
   <body>
+    <section id="section#ToDo"></section>
     <div id="app"></div>
     <script type="module" src="/src/js/main.js"></script>
   </body>
