--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <section id="section#ToDo"></section>
+    <section id="section#Done"></section>
     <div id="app"></div>
     <script type="module" src="/src/js/main.js"></script>
   </body>
