styling and added js class

--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
     <title>Todo or not todo?</title>
   </head>
   <body>
-    <section id="section#ToDo"></section>
-    <section id="section#Done"></section>
-    <div id="app"></div>
+    <div id="container">
+      <div id="toDoApp"></div>
+     <p class="tasks"> Tasks to do: </p>
+     <section id="section__ToDo"></section>
+      <p class="tasks">Completed tasks:</p>
+     <section id="section__Done"></section>
+    </div>
     <script type="module" src="/src/js/main.js"></script>
   </body>
 </html>
