:sparkles: add new task functionality

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <div id="container">
     <div id="header"></div>
 
-    <div class="form">
-      <input class="inputBox form__input" type="text" placeholder="  Add new task...">
-      <button class="btn form__btn" id="btn">Add</button>
+    <div class="form" id="addNewTask">
+      <input class="inputBox form__input" id="inputBox" type="text" placeholder="  Add new task...">
+      <button class="btn form__btn" id="btn">Add New Task!</button>
     </div>
     <div class="tasks">
       <p class="tasks__paragraf"> Tasks to do: </p>
